...
            popup.handleTouch(location)
            return
        }
        
        #if DEBUG
        // Check if debug button was tapped
        if nodes(at: location).contains(where: { $0.name == "DebugGameOver" }) { gameOver(); return }
        #endif
        
        // Check if “Menu” was tapped
        if nodes(at: location).contains(where: { $0.name == "BackToMenuButton" }) {
            AudioService.shared.playSystemSFX(id: 1110)
            let popup = ConfirmExitPopup(size: self.size,
                onConfirm: { [weak self] in
                    guard let self else { return }
                    AudioService.shared.playSystemSFX(id: 1110)
                    self.invalidateTimers()
...
